--- a/index.html
+++ b/index.html
@@ -15,13 +15,27 @@
     <link href="css/custom.css" rel="stylesheet" />
 </head>
 <body>
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-        <div class="container px-5">
-            <a class="navbar-brand" href="#header">QR Menus</a>
+
+
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <div class="container px-5 d-flex justify-content-between align-items-center">
+        <!-- Logo -->
+        <a class="navbar-brand" href="#header">QR Menus</a>
+
+        <!-- Botões e menu colapsável -->
+        <div class="d-flex align-items-center navbar-right">
+            <!-- Botão "Começar" visível em telas grandes -->
+            <a class="btn btn-primary btn-sm px-3 d-none d-lg-inline-block navbar-start-btn" href="#contact">Começar</a>
+
+            <!-- Botão "Começar" visível em telas pequenas -->
+            <a class="btn btn-primary btn-sm px-3 d-lg-none navbar-start-btn" href="#contact">Começar</a>
+
+            <!-- Botão navbar-toggler -->
             <button class="navbar-toggler navbar-toggler-custom" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
+            <!-- Menu colapsável -->
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="#header">Início</a></li>
@@ -32,11 +46,21 @@
                 </ul>
             </div>
         </div>
-    </nav>
+
+        
+    </div>
+</nav>
+
+
+
+
 
     <!-- Header -->
-    <header class="bg-dark py-5" id="header">
-        <div class="container px-5">
+    <header class="bg-dark py-5" id="header" style="position: relative; background: url('assets/image/restaurante.jpg') center/cover no-repeat;">
+        <!-- Overlay (película) -->
+        <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.8);"></div>
+
+        <div class="container px-5" style="position: relative; z-index: 1;">
             <div class="row gx-5 justify-content-center">
                 <div class="col-lg-6">
                     <div class="text-center my-5">
@@ -50,6 +74,7 @@
             </div>
         </div>
     </header>
+
 
     <!-- Seção Quem Somos -->
     <section class="py-5" id="about-us">
@@ -124,7 +149,7 @@
                                 <li class="mb-3"><span class="fa-li"><i class="bi bi-check"></i></span>Atualizações ilimitadas</li>
                             </ul>
                             <div class="d-grid gap-3 d-sm-flex justify-content-sm-center">
-                                <button class="btn btn-primary btn-lg px-4 me-sm-3" onclick="selectAndScroll('basic')">Escolher Plano Básico</button>
+                                <button class="btn btn-primary px-4 me-sm-3" onclick="selectAndScroll('basic')">Escolher</button>
                             </div>
                         </div>
                     </div>
@@ -141,7 +166,7 @@
                                 <li class="mb-3"><span class="fa-li"><i class="bi bi-check"></i></span>Design personalizado</li>
                             </ul>
                             <div class="d-grid gap-3 d-sm-flex justify-content-sm-center">
-                                <button class="btn btn-primary btn-lg px-4 me-sm-3" onclick="selectAndScroll('pro')">Escolher Plano Pro</button>
+                                <button class="btn btn-primary px-4 me-sm-3" onclick="selectAndScroll('pro')">Escolher</button>
                             </div>
                         </div>
                     </div>
