--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
         <a class="navbar-brand" href="#header">QR Menus</a>
 
         <!-- Botões e menu colapsável -->
-        <div class="navbar-buttons d-flex align-items-center">
+        <!-- <div class="navbar-buttons d-flex align-items-center"> -->
             <!-- Botão "Começar" visível em telas grandes -->
-            <a class="btn btn-primary btn-sm px-3 d-none d-lg-inline-block navbar-start-btn" href="#contact">Começar</a>
+            <!-- <a class="btn btn-primary btn-sm px-3 d-none d-lg-inline-block navbar-start-btn" href="#contact">Começar</a> -->
             
             <!-- Botão "Começar" visível em telas pequenas -->
-            <a class="btn btn-primary btn-sm px-3 d-lg-none navbar-start-btn" href="#contact">Começar</a>
-        </div>
+            <!-- <a class="btn btn-primary btn-sm px-3 d-lg-none navbar-start-btn" href="#contact">Começar</a> -->
+        <!-- </div> -->
 
         <!-- Botão navbar-toggler -->
         <button class="navbar-toggler navbar-toggler-custom" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
