--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <div class="container px-5 d-flex justify-content-between align-items-center">
+    <div class="container d-flex justify-content-between align-items-center">
         <!-- Logo -->
         <a class="navbar-brand" href="#header">QR Menus</a>
 
