--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
         <a class="navbar-brand" href="#header">QR Menus</a>
 
         <!-- Botões e menu colapsável -->
-        <!-- <div class="navbar-buttons d-flex align-items-center"> -->
+        <div class="navbar-buttons d-flex align-items-center">
             <!-- Botão "Começar" visível em telas grandes -->
-            <!-- <a class="btn btn-primary btn-sm px-3 d-none d-lg-inline-block navbar-start-btn" href="#contact">Começar</a> -->
+            <a class="btn btn-primary btn-sm px-3 d-none d-lg-inline-block navbar-start-btn" href="#contact">Começar</a>
             
             <!-- Botão "Começar" visível em telas pequenas -->
-            <!-- <a class="btn btn-primary btn-sm px-3 d-lg-none navbar-start-btn" href="#contact">Começar</a> -->
-        <!-- </div> -->
+            <a class="btn btn-primary btn-sm px-3 d-lg-none navbar-start-btn" href="#contact">Começar</a>
+        </div>
 
         <!-- Botão navbar-toggler -->
         <button class="navbar-toggler navbar-toggler-custom" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -55,7 +55,7 @@
 
 
     <!-- Header -->
-    <header class="bg-dark py-5" id="header" style="position: relative; background: url('assets/image/restaurante.jpg') center/cover no-repeat;">
+    <header class="bg-dark py-3" id="header" style="position: relative; background: url('assets/image/restaurante.jpg') center/cover no-repeat;">
         <!-- Overlay (película) -->
         <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.8);"></div>
 
@@ -77,7 +77,7 @@
 
     <!-- Seção Quem Somos -->
     <section class="py-5" id="about-us">
-        <div class="container px-5 my-5">
+        <div class="container px-3 my-5">
             <div class="row gx-5 align-items-center">
                 <div class="col-lg-6 mb-4 mb-lg-0">
                     <div class="about-image">
