ajsute quem somos

--- a/index.html
+++ b/index.html
@@ -49,11 +49,6 @@
         </div>
     </nav>
 
-
-
-
-
-
     <!-- Header -->
     <header class="bg-dark py-5" id="header" style="position: relative; background: url('assets/image/restaurante.jpg') center/cover no-repeat;">
         <!-- Overlay (película) -->
@@ -77,7 +72,7 @@
 
     <!-- Seção Quem Somos -->
     <section class="py-5" id="about-us">
-        <div class="container px-5 my-5">
+        <div class="container px-4 my-5">
             <div class="row gx-5 align-items-center">
                 <div class="col-lg-6 mb-4 mb-lg-0">
                     <div class="about-image">
@@ -86,8 +81,11 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="text-center text-lg-start">
-                        <h2 class="fw-bolder">Quem Somos</h2>
-                        <p class="lead mb-0 justificado">Na <strong>[Nome da Empresa]</strong>, transformamos cardápios de restaurantes com soluções digitais de QR Code. Oferecemos um serviço que permite atualizações em tempo real, sem custos adicionais com impressões. Com nossos planos, você tem acesso à personalização completa e suporte contínuo. Escolha <strong>[Nome da Empresa]</strong> e modernize seu cardápio de forma prática e eficiente.</p>
+                        <p class="lead mb-0 justificado">Na <strong>QR MENU</strong>, transformamos cardápios de 
+                            restaurantes com soluções digitais de QR Code. Oferecemos um serviço que permite 
+                            atualizações em tempo real, sem custos adicionais com impressões. Com nossos planos, 
+                            você tem acesso à personalização completa e suporte contínuo. Escolha 
+                            <strong>QR MENU</strong> e modernize seu cardápio de forma prática e eficiente.</p>
                     </div>
                 </div>
             </div>
