--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     </div>
                     <h2 class="h4 fw-bolder">Menu Digital</h2>
                     <p>Transforme seu menu físico em um QR Code acessível de qualquer dispositivo.</p>
-                    <a class="text-decoration-none" data-bs-toggle="modal" data-bs-target="#contactModal">Saiba Mais<i class="bi bi-arrow-right"></i></a>
+                    <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#contactModal">Saiba Mais <i class="bi bi-arrow-right"></i></button>
                 </div>
                 <div class="col-lg-4 mb-5 mb-lg-0">
                     <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3">
@@ -110,7 +110,7 @@
                     </div>
                     <h2 class="h4 fw-bolder">Facilidade de Acesso</h2>
                     <p>Seus clientes acessam o cardápio sem baixar aplicativos adicionais.</p>
-                    <a class="text-decoration-none" data-bs-toggle="modal" data-bs-target="#contactModal">Saiba Mais<i class="bi bi-arrow-right"></i></a>
+                    <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#contactModal">Saiba Mais <i class="bi bi-arrow-right"></i></button>
                 </div>
                 <div class="col-lg-4">
                     <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3">
@@ -118,11 +118,12 @@
                     </div>
                     <h2 class="h4 fw-bolder">Aumente as Vendas</h2>
                     <p>Melhore a experiência do cliente e impulsione suas vendas com um menu moderno e interativo.</p>
-                    <a class="text-decoration-none" data-bs-toggle="modal" data-bs-target="#contactModal">Saiba Mais<i class="bi bi-arrow-right"></i></a>
+                    <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#contactModal">Saiba Mais <i class="bi bi-arrow-right"></i></button>
                 </div>
             </div>
         </div>
     </section>
+
 
 
     <!-- Seção de Preços -->
@@ -187,7 +188,7 @@
             <button type="button" class="btn-close custom-btn-close-um" data-bs-dismiss="modal"></button>
           </div>
         <div class="modal-body custom-modal-body">
-            <p class="lead mb-4">Fale com a gente para mais informações sobre nossos serviços</p>
+            <p class="lead-form mb-4">Fale com a gente para mais informações sobre nossos serviços</p>
           <form id="contactForm">
             <div class="form-group mb-3">
               <label for="name">Nome completo</label>
